--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ venv/
 .cursor/settings.json
 .cursor/settings.local.json
 
-# Antigravity/Codex user config (for users who install to .agent)
+# Antigravity user config (for users who install to .agent)
 .agent/settings.json
 .agent/settings.local.json
 
